# Halftone

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  audio.c  audio.h  audio_internal.h  buffer.py  celt_pitch_xcorr_arm-gnu.S  image.c  image.h  index.c  index.h  main.c  playback.c  playback.h  shared_audio.h  shared_opusfile.h  shared_pd.h
Source/: consts.lua  index.lua  logging.lua  main.lua  pdxinfo  playback.lua  ui.lua
Source/HOME - Resting State/: 01 - HOME - 1.opus  02 - HOME - 2.opus  03 - HOME - 3.opus  04 - HOME - 4.opus  05 - HOME - 5.opus  06 - HOME - 6.opus  07 - HOME - 7.opus  08 - HOME - 8.opus  09 - HOME - 9.opus  10 - HOME - 10.opus  credits.txt
Source/resources/: Asheville Ayu Bold.fnt  Asheville Ayu.fnt  licenses.txt
Source/splash/: empty.lua
Source/ui/: consts.lua  listpanel.lua  menu.lua  panel.lua  playback.lua  seeking.lua  sideview.lua  ui.lua
Source/ui/panels/: albums.lua  artists.lua  listpanel.lua  menu.lua  nowplaying.lua  tracks.lua
Source/ui/sideviews/: art.lua  barsideview.lua  duration.lua
assets/: Playdate.gpl  halftone_cover_220.piskel  halftone_icon_128.piskel
buildsupport/: calloc.c
cmake/: arm.cmake  playdate_game.cmake
lib/speex_resampler/: CMakeLists.txt
lib/speex_resampler/include/: speex_resampler.h
lib/speex_resampler/include/speex/: speex_resampler.h  speexdsp_types.h
lib/stb_image/: CMakeLists.txt  stb_implementation.c
lib/stb_image/include/: stb_image_resize.h
utilities/: qrutility.lua
